--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Club de Assinaturas</title>
+    <title>Encantos literários</title>
 
     <link rel="stylesheet" href="styles/index.css" />
     <link
@@ -14,5 +14,36 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header id="intro">
+      <div class="hero">
+        <nav class="container">
+          <div>
+            <a href="#">
+              <img
+                class="desktop-only"
+                src="assets/logo-horizontal.svg"
+                alt="logo "
+              />
+              <img class="mobile" src="assets/logo-symbol.svg" alt="" />
+            </a>
+          </div>
+
+          <div>
+            <button class="button">
+              <span class="Button-text">Assinar</span>
+            </button>
+          </div>
+        </nav>
+
+        <div class="hero-content container">
+          <h1>Desperte a sua imaginação e explore novos mundos</h1>
+          <p>
+            Junte-se ao clube de assinatura Encantos Literários e descubra
+            maravilhas e aventuras a cada página
+          </p>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
