--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
         </div>
       </div>
     </header>
+    <main class="container">
+      <section class="text-appear">
+        <div>
+          <img src="assets/images/spellbook.png" alt="livro" />
+          <img src="assets/images/planchette.png" alt="prancheta" />
+          <img src="assets/images/crystal-ball.png" alt="Bola de cristal" />
 
+          <h2>
+            <span id="span-1">Receba todo mês um <strong>livro surpresa</strong><span>
+            <span id="span-2"> do seu tema favorito, acompanhado de <strong>brindes exclusivos</strong></span>
+            <span id="span-3">que tornarão a sua experiência literária ainda mais<strong> encantadora</strong>.</span>
+          </h2>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
