feat: add section month kit

--- a/index.html
+++ b/index.html
@@ -46,19 +46,55 @@
       </div>
     </header>
     <main class="container">
-      <section class="text-appear">
+      <section class="textAppear">
         <div>
           <img src="assets/images/spellbook.png" alt="livro" />
           <img src="assets/images/planchette.png" alt="prancheta" />
           <img src="assets/images/crystal-ball.png" alt="Bola de cristal" />
 
           <h2>
-            <span id="span-1">Receba todo mês um <strong>livro surpresa</strong><span>
-            <span id="span-2"> do seu tema favorito, acompanhado de <strong>brindes exclusivos</strong></span>
-            <span id="span-3">que tornarão a sua experiência literária ainda mais<strong> encantadora</strong>.</span>
+            <span id="span-1"
+              >Receba todo mês um <strong>livro surpresa</strong></span
+            >
+            <span id="span-2">
+              do seu tema favorito, acompanhado de
+              <strong>brindes exclusivos</strong></span
+            >
+            <span id="span-3"
+              >que tornarão a sua experiência literária ainda mais<strong>
+                encantadora</strong
+              >.</span
+            >
           </h2>
         </div>
       </section>
+
+      <section class="monthKit container">
+        <header>
+          <div class="flex">
+            <img src="assets/icons/star.svg" alt="" />
+            <h2>Conheça o kit mensal</h2>
+            <img src="assets/icons/star.svg" alt="" />
+          </div>
+
+          <p>Recebe uma caixa surpresa todos os meses</p>
+        </header>
+
+        <div class="monthBook">
+          <img src="assets/images/book01.png" alt="" />
+          <img src="assets/images/bookmark-purple.png" alt="" />
+          <img src="assets/images/bookmark-yellow.png" alt="" />
+          <img src="assets/images/pin.png" alt="" />
+          <img src="assets/icons/vector-book.svg" alt="" />
+          <img src="assets/icons/vector-pin.svg" alt="" />
+          <img src="assets/icons/vector_book_mark.svg" alt="" />
+
+          <span>Livro em capa dura</span>
+          <span>Broche exclusivo</span>
+          <span>Marca páginas temático</span>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
