fix(hero and monthkit): add blur in the ellipses

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
       </div>
     </header>
 
+    <div class="blur">
+      <div class="ellipse1"></div>
+      <div class="ellipse2"></div>
+      <div class="ellipse3"></div>
+      <div class="ellipse4"></div>
+    </div>
+
     <main class="container">
       <section class="textAppear">
         <div>
