--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <div class="blur">
       <div class="ellipse1"></div>
-      <div class="ellipse2"></div>
+      <div class="ellipse2 desktop-only"></div>
       <div class="ellipse3"></div>
-      <div class="ellipse4"></div>
+      <div class="ellipse4 desktop-only"></div>
     </div>
 
     <main class="container">
