fix(signatures): add crrection the buttons hover in the cards

--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
                 </li>
               </ul>
 
-              <button class="buttonSignature">Assinar mensal</button>
+              <button class="buttonSignature">
+                <span class="Button-text">Assinar mensal</span>
+              </button>
             </div>
           </div>
 
@@ -235,7 +237,9 @@
                 </li>
               </ul>
 
-              <button class="button">Assinar semestral</button>
+              <button class="button">
+                <span class="Button-text">Assinar semestral</span>
+              </button>
             </div>
           </div>
 
@@ -329,7 +333,9 @@
                 </li>
               </ul>
 
-              <button class="buttonSignature">Assinar anual</button>
+              <button class="buttonSignature">
+                <span class="Button-text">Assinar anual</span>
+              </button>
             </div>
           </div>
         </div>
