--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <strong>brindes exclusivos</strong></span
             >
             <span id="span-3"
-              >que tornarão a sua experiência literária ainda mais<strong>
+              >que tornarão a sua experiência literária<strong>
                 encantadora</strong
               >.</span
             >
