fix: correction the box figure in mobile version

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="boxCards flex">
           <div class="card flex">
-            <div class="figure">
+            <div class="figure desktop-only">
               <svg
                 width="40"
                 height="40"
@@ -190,7 +190,7 @@
           </div>
 
           <div class="card flex">
-            <div class="figure">
+            <div class="figure desktop-only">
               <svg
                 width="46"
                 height="51"
@@ -302,7 +302,7 @@
           </div>
 
           <div class="card flex">
-            <div class="figure">
+            <div class="figure desktop-only">
               <svg
                 width="40"
                 height="40"
