fix: add link from id box signatures in the button signature

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
           </div>
 
           <div>
-            <button class="button">
-              <span class="Button-text">Assinar</span>
-            </button>
+            <a href="#signatures">
+              <button class="button">
+                <span class="Button-text">Assinar</span>
+              </button></a
+            >
           </div>
         </nav>
 
@@ -96,7 +98,7 @@
         </div>
       </section>
 
-      <section class="signatures">
+      <section id="signatures" class="signatures">
         <h2>Assinatura <br />Encantos Literários</h2>
 
         <div class="boxCards flex">
